[package]
name = "ulog_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.81"
quote = "1.0.10"
ulog = { path = "../ulog" }
proc-macro2 = "1.0.32"

[dev-dependencies]
serde = { version = "1.0.130", features = ["derive"] }

[lib]
proc-macro = true
